# deca_challenge

./: GBDT.ipynb  ensembling.ipynb  prepare_data.ipynb
batch-learn/: CMakeLists.txt  README.md
batch-learn/build_static/: CMakeCache.txt  Makefile  batch-learn  cmake_install.cmake
batch-learn/src/commands/: model.cpp
batch-learn/src/util/: common.hpp
